# gofindthem

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  bazel-bin  bazel-gofindthem  bazel-out  bazel-someProject  bazel-testlogs  bentchmark1.txt  deps.bzl  go.mod  go.sum
benchmarks/: BUILD.bazel  benchmark_test.go  finder_test.go
benchmarks/files/: profileEmptyDsl.out
dsl/: BUILD.bazel  expression.go  expression_test.go  parser.go  parser_test.go  scanner.go  scanner_test.go
examples/: BUILD.bazel  main.go
examples/dsl/: BUILD.bazel  main.go
examples/finder/: BUILD.bazel  main.go
examples/group/finder/: BUILD.bazel  main.go
finder/: BUILD.bazel  ahocorasickMachine.go  finde_test.go  finder.go  finder_test.go  regexEngine.go  substringEngine.go
group/: README.md
group/dsl/: BUILD.bazel  expression.go  expression_test.go  parser.go  parser_test.go  scanner.go  scanner_test.go
group/finder/: BUILD.bazel  finder.go  finder_test.go  internal.go  internal_test.go
plotgraph/: BUILD.bazel  main.go
plotgraph/files/: all_benchmark.txt  all_benchmark2.txt  benchStat.txt  benchmark2.txt  benchmark3.txt  expIncrease.txt  expIncrease2.txt  expIncreaseGeneral.txt  expIncreaseGeneralAnknown.txt  expIncreaseGeneralCloudFlare.txt  expIncreaseGeneralCloudFlare2.txt  expIncreaseGeneralCloudFlare3.txt  expIncreaseGeneralCloudFlare4.txt  expIncreaseGeneralCloudFlareFork.txt  expIncreaseGeneralCloudFlareFork2.txt  expIncreaseGeneralCloudFlareFork3.txt
useCasesBenchmarks/: BUILD.bazel  useCasesBenchmark_test.go
