load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/pedroegsilva/gofindthem
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)
