load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "dsl",
    srcs = [
        "expression.go",
        "parser.go",
        "scanner.go",
    ],
    importpath = "github.com/pedroegsilva/gofindthem/dsl",
    visibility = ["//visibility:public"],
)

go_test(
    name = "dsl_test",
    srcs = [
        "expression_test.go",
        "parser_test.go",
        "scanner_test.go",
    ],
    embed = [":dsl"],
    deps = ["@com_github_stretchr_testify//assert"],
)
