load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "finder",
    srcs = [
        "finder.go",
        "regexEngine.go",
        "substringEngine.go",
    ],
    importpath = "github.com/pedroegsilva/gofindthem/finder",
    visibility = ["//visibility:public"],
    deps = [
        "//dsl",
        "@com_github_anknown_ahocorasick//:ahocorasick",
        "@com_github_cloudflare_ahocorasick//:ahocorasick",
        "@com_github_pedroegsilva_ahocorasick//ahocorasick",
    ],
)

go_test(
    name = "finder_test",
    srcs = ["finder_test.go"],
    embed = [":finder"],
    deps = [
        "//dsl",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//mock",
    ],
)
