load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "dsl_lib",
    srcs = ["main.go"],
    importpath = "github.com/pedroegsilva/gofindthem/examples/dsl",
    visibility = ["//visibility:private"],
    deps = ["//dsl"],
)

go_binary(
    name = "dsl",
    embed = [":dsl_lib"],
    visibility = ["//visibility:public"],
)
