load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "finder_lib",
    srcs = ["main.go"],
    importpath = "github.com/pedroegsilva/gofindthem/examples/finder",
    visibility = ["//visibility:private"],
    deps = ["//finder"],
)

go_binary(
    name = "finder",
    embed = [":finder_lib"],
    visibility = ["//visibility:public"],
)
